src/components/insidecomponent/css/Messages.css
#div_messages{
    width: 100%;
    height: 100%;
    /*background: chartreuse;*/
    overflow-y: auto;
    /* background: linear-gradient(20deg, #a1ffd9, #f3ff77); */
    border-radius: 5px;
    /* border: solid 1px grey; */
    color: black;
    font-family: Arial;
    opacity: 0.9;
    /* box-shadow: 5px 5px 20px black; */
}

.openner{
    /* border: solid 1px grey; */
    background: white;
    box-shadow: 0px 0px 5px #7e7e7e;
    width: 100%;
    padding-left: 10px;
    border-radius: 5px;
    margin-bottom: 5px;
    cursor: pointer;
    margin-left: auto;
    margin-right: auto;
}

#table_container{
    width: 100%;
    margin-top: 0px;
    text-align: left;
    padding: 10px;
    /* font-family: 'Raleway', sans-serif; */
    font-family: 'Roboto', sans-serif;
}

.preview_message{
    color: rgb(87, 86, 86);
}

#h3_label_m{
    color: white;
    /* background-color: white; */
    width: 90%;
    /* height: 40px; */
    /* border-radius: 5px; */
    margin-left: auto;
    margin-right: auto;
    /* font-family: 'Raleway', sans-serif; */
    font-family: 'Roboto', sans-serif;
}

/* @media screen and (max-width: 720px) {
    .openner{
        border: solid 1px grey;
        background: chocolate;
        width: 50px;
        height: 50px;
        font-size: 0px;
        padding-left: 0px;
        border-radius: 50px;
        margin-bottom: 5px;
        cursor: pointer;
    }

    #h3_label_m{
        font-size: 0px;
    }
} */

